# JC3248W535C-screensaver

./: .gitignore  CMakeLists.txt  README.md  esphome.yml  sdkconfig.defaults
main/: CMakeLists.txt  config.h  display.c  display.h  display_test.c  fractal.c  fractal.h  idf_component.yml  main.c  main.c.axs15231b  touch.c  touch.h  ui.c  ui.h
